test/src/e2e_vm_tests/test_programs/should_pass/dca/unused_fields/src/utils.sw
library;

pub struct Foo {
    pub value: u64
}

pub fn external_fn(_s: Foo) {

}
