test/src/e2e_vm_tests/test_programs/should_fail/impl_private_method/src/lib.sw
library;

pub struct MyStruct {
    pub x: u64,
}

impl MyStruct {
    fn foo(self) {}

    fn bar() {}
}
